tests/snapshots/examples_fixtures/type_system__failing__170_match_disagreement_all_concrete_ordering_invariant_e300.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/170_match_disagreement_all_concrete_ordering_invariant_e300.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The arms of this `match` expression produce different types.

  --> examples/type_system/failing/170_match_disagreement_all_concrete_ordering_invariant_e300.flx:4:18
  |
3 |         true -> "oops",

  |                 ------ first arm returns `String`
4 |         false -> 1,
  |                  ^
  |                  - arm 2 returns `Int`

Help:
  All match arms must return the same type. Change arm 2 to return `String`.
== stdout ==
<not executed>
